--- a/styles.css
+++ b/styles.css
@@ -15,82 +15,99 @@ body {
 h1 {
   font-family: "atb", sans-serif;
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: 3rem;
 }
 h1 span {
   color: transparent;
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 1.2px black;
 }
 .wrapper {
   width: 100%;
   height: 100vh;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 100px;
 }
+
 form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  display: grid;
+  grid-template-columns: auto 100px;
+  grid-gap: 15px;
 }
 
 input,
 select,
 button {
-  font-size: 30px;
+  font-size: 15px;
   font-family: "atl", sans-serif;
   border-radius: 20px;
   padding: 25px 20px;
   border: 1px solid black;
 }
 
-input,
-button.convert {
-  width: 300px;
-  margin-right: 15px;
-}
 select,
-button.revert{
-  width: 160px;
+button.revert {
   text-align: center;
 }
 
-input {
-  background-color: white;
-}
-
-select {
-  background-color: black;
-  color: white;
-}
-
-button.convert {
-  background-color: black;
-  color: white;
-  text-align: center;
-}
-
+input,
 button.revert {
   background-color: white;
-  color: black;
 }
 
-.material-symbols-outlined {
-  color: red;
+select,
+button.convert {
+  background-color: black;
+  color: white;
 }
 
-/* Pour désactiver les flèches intérieures */
+button.convert {
+  text-align: center;
+}
+
+input::placeholder {
+  color: rgb(159, 159, 159);
+}
+
+/* Dsactiver les flèches intérieures */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
 /* Pour Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+@media (min-width: 600px) {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
+  h1 span {
+    -webkit-text-stroke: 1.4px black;
+  }
+}
+@media (min-width: 801px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+  h1 {
+    font-size: 5rem;
+    text-align: center;
+  }
+  h1 span {
+    -webkit-text-stroke: 1.5px black;
+  }
+}
+@media (min-width: 1025px) {
+  /* big landscape tablets, laptops, and desktops */
+}
+@media (min-width: 1281px) {
+  /* hi-res laptops and desktops */
 }
